--- a/styles/tablet.css
+++ b/styles/tablet.css
@@ -1,7 +1,3 @@
-.header {
-    background-color: none;
-} 
-
 .nav__list, .nav__btn {
     display: none;
 }
@@ -12,20 +8,29 @@
     align-items: center;
 }
 
-.hero__article--desc {
-    max-width: 40%;
-}
-
 .hero__article--image {
-    width: 60%;
-}
+    max-width: 30%;
+}  
 
-.hero__image-container, .hero__image {
+/* .hero__image-container, .hero__image {
     width: 100%;
-}
+} */
 
 .pricing__item {
     margin: 0
+}
+
+.features {
+    display: flex;
+}
+
+.features__article {
+    flex-basis: 50%;
+}
+
+.features__article--desc {
+    display: flex;
+    flex-direction: column;
 }
 
 .download {
